--- a/2.html
+++ b/2.html
@@ -3,23 +3,59 @@
 <head>
   <title>WEB1 - CSS</title>
   <meta charset="utf-8">
+<style>
+body{margin:0px;
+}
+
+ a {
+   color:green;
+   text-decoration: none;
+ }
+
+h1{font-size: 50px;
+text-align :center;
+color: purple;
+border-bottom: 1px solid gray;
+margin:0px;
+padding:5px;
+}
+
+#grid ol{
+  border-right: 1px solid gray;
+width: 100px;
+margin:0px;
+padding:25px;
+padding-left: :32px;
+}
+
+#grid{
+  display: grid;
+  grid-template-columns: 150px 1fr;
+}
+
+#article{
+  padding : 25px;
+}
+
+</style>
+
 </head>
 <body>
 <h1><a href="index.html">WEB</a></h1>
-<ol>
-  <li><a href="1.html">HTML</a></li>
-  <li><a href="2.html">CSS</a></li>
-  <li><a href="3.html">JavaScript</a></li>
-</ol>
+<div id="grid">
+  <ol>
+    <li><a href="1.html">HTML</a></li>
+    <li><a href="2.html" style="color:red;text-decoration:underline">CSS</a></li>
+    <li><a href="3.html">JavaScript</a></li>
+  </ol>
 
-<h2>CSS</h2>
-<p>
-  CSS
-</p>
-
-<p style="margin-top:45px;">
-  CSS elements
-</p>
-
+  <span id="article">
+    <h2>CSS</h2>
+    <p>
+      CSS is Good
+    </p>
+    </p>
+  </span>
+</div>
 </body>
 </html>
