--- a/index.html
+++ b/index.html
@@ -1,20 +1,16 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - html</title>
+  <title>Index</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1><a href="index.html">WEB</a></h1>
+<h1><a href="index.html">Welcome Home</a></h1>
 <ol>
-  <li><a href="1.html">HTML</a></li>
-  <li><a href="2.html">CSS</a></li>
-  <li><a href="3.html">JavaScript</a></li>
+  <li><a href="HKJ.html">쭌욤이</a></li>
+  <li><a href="KMH.html">민희</a></li>
+  <li><a href="Jay.html">재이</a></li>
 </ol>
-
-<p style="margin-top:45px;">
-  나의<h1>꼰대! </h1> <strong>공격</strong>을 <u>받아라!</u>
-</P>
-
 </body>
 </html>
